// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseForm
    expense={
        Object {
            "amount": 195,
            "createdAt": 0,
            "description": "Gum",
            "id": "1",
            "note": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <select
          autoFocus={true}
          className="input--text"
          onChange={[Function]}
          value="Gum"
>
          <option>
                    Please select an option
          </option>
          <option
                    value="Travel"
          >
                    Travel
          </option>
          <option
                    value="Entertainment"
          >
                    Entertainment
          </option>
          <option
                    value="Internet and Phone Bills"
          >
                    Internet and Phone Bills
          </option>
          <option
                    value="Health Insurance Premium"
          >
                    Health Insurance Premium
          </option>
          <option
                    value="Meals"
          >
                    Meals
          </option>
          <option
                    value="Vehicle Use"
          >
                    Vehicle Use
          </option>
          <option
                    value="Education Expenses"
          >
                    Education Expenses
          </option>
          <option
                    value="Business Insurance"
          >
                    Business Insurance
          </option>
          <option
                    value="Rent"
          >
                    Rent
          </option>
          <option
                    value="Advertising"
          >
                    Advertising
          </option>
          <option
                    value="Other"
          >
                    Other (Please elaborate in detail in notes)
          </option>
</select>,
        <input
          className="input--text"
          onChange={[Function]}
          placeholder="Amount"
          type="text"
          value="1.95"
/>,
        <SingleDatePicker
          anchorDirection="left"
          customCloseIcon={null}
          customInputIcon={null}
          date={"1970-01-01T00:00:00.000Z"}
          daySize={39}
          disabled={false}
          displayFormat={[Function]}
          enableOutsideDays={false}
          firstDayOfWeek={null}
          focused={false}
          hideKeyboardShortcutsPanel={false}
          horizontalMargin={0}
          id="date"
          initialVisibleMonth={null}
          isDayBlocked={[Function]}
          isDayHighlighted={[Function]}
          isOutsideRange={[Function]}
          isRTL={false}
          keepOpenOnDateSelect={false}
          monthFormat="MMMM YYYY"
          navNext={null}
          navPrev={null}
          numberOfMonths={1}
          onClose={[Function]}
          onDateChange={[Function]}
          onFocusChange={[Function]}
          onNextMonthClick={[Function]}
          onPrevMonthClick={[Function]}
          orientation="horizontal"
          phrases={
                    Object {
                              "chooseAvailableDate": [Function],
                              "clearDate": "Clear Date",
                              "closeDatePicker": "Close",
                              "dateIsUnavailable": [Function],
                              "enterKey": "Enter key",
                              "escape": "Escape key",
                              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                              "homeEnd": "Home and end keys",
                              "jumpToNextMonth": "Move forward to switch to the next month",
                              "jumpToPrevMonth": "Move backward to switch to the previous month",
                              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                      select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                              "keyboardShortcuts": "Keyboard Shortcuts",
                              "leftArrowRightArrow": "Right and left arrow keys",
                              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                              "moveFocusByOneMonth": "Switch months",
                              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                              "openThisPanel": "Open this panel",
                              "pageUpPageDown": "page up and page down keys",
                              "questionMark": "Question mark",
                              "returnFocusToInput": "Return to the date input field",
                              "selectFocusedDate": "Select the date in focus",
                              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                              "upArrowDownArrow": "up and down arrow keys",
                            }
          }
          placeholder="Date"
          readOnly={false}
          renderCalendarInfo={null}
          renderDay={null}
          renderMonth={null}
          reopenPickerOnClearDate={false}
          required={false}
          screenReaderInputMessage=""
          showClearDate={false}
          showDefaultInputIcon={false}
          withFullScreenPortal={false}
          withPortal={false}
/>,
        <textarea
          className="input--textarea"
          onChange={[Function]}
          placeholder="Add a note for your expense (optional)"
          value=""
/>,
        <div>
          <button
                    className="button--add"
          >
                    Save Expense
          </button>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "autoFocus": true,
          "children": Array [
            <option>
              Please select an option
</option>,
            <option
              value="Travel"
>
              Travel
</option>,
            <option
              value="Entertainment"
>
              Entertainment
</option>,
            <option
              value="Internet and Phone Bills"
>
              Internet and Phone Bills
</option>,
            <option
              value="Health Insurance Premium"
>
              Health Insurance Premium
</option>,
            <option
              value="Meals"
>
              Meals
</option>,
            <option
              value="Vehicle Use"
>
              Vehicle Use
</option>,
            <option
              value="Education Expenses"
>
              Education Expenses
</option>,
            <option
              value="Business Insurance"
>
              Business Insurance
</option>,
            <option
              value="Rent"
>
              Rent
</option>,
            <option
              value="Advertising"
>
              Advertising
</option>,
            <option
              value="Other"
>
              Other (Please elaborate in detail in notes)
</option>,
          ],
          "className": "input--text",
          "onChange": [Function],
          "value": "Gum",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please select an option",
            },
            "ref": null,
            "rendered": "Please select an option",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Travel",
              "value": "Travel",
            },
            "ref": null,
            "rendered": "Travel",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Entertainment",
              "value": "Entertainment",
            },
            "ref": null,
            "rendered": "Entertainment",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Internet and Phone Bills",
              "value": "Internet and Phone Bills",
            },
            "ref": null,
            "rendered": "Internet and Phone Bills",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Health Insurance Premium",
              "value": "Health Insurance Premium",
            },
            "ref": null,
            "rendered": "Health Insurance Premium",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Meals",
              "value": "Meals",
            },
            "ref": null,
            "rendered": "Meals",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Vehicle Use",
              "value": "Vehicle Use",
            },
            "ref": null,
            "rendered": "Vehicle Use",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Education Expenses",
              "value": "Education Expenses",
            },
            "ref": null,
            "rendered": "Education Expenses",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Business Insurance",
              "value": "Business Insurance",
            },
            "ref": null,
            "rendered": "Business Insurance",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Rent",
              "value": "Rent",
            },
            "ref": null,
            "rendered": "Rent",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Advertising",
              "value": "Advertising",
            },
            "ref": null,
            "rendered": "Advertising",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Other (Please elaborate in detail in notes)",
              "value": "Other",
            },
            "ref": null,
            "rendered": "Other (Please elaborate in detail in notes)",
            "type": "option",
          },
        ],
        "type": "select",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "input--text",
          "onChange": [Function],
          "placeholder": "Amount",
          "type": "text",
          "value": "1.95",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "anchorDirection": "left",
          "customCloseIcon": null,
          "customInputIcon": null,
          "date": "1970-01-01T00:00:00.000Z",
          "daySize": 39,
          "disabled": false,
          "displayFormat": [Function],
          "enableOutsideDays": false,
          "firstDayOfWeek": null,
          "focused": false,
          "hideKeyboardShortcutsPanel": false,
          "horizontalMargin": 0,
          "id": "date",
          "initialVisibleMonth": null,
          "isDayBlocked": [Function],
          "isDayHighlighted": [Function],
          "isOutsideRange": [Function],
          "isRTL": false,
          "keepOpenOnDateSelect": false,
          "monthFormat": "MMMM YYYY",
          "navNext": null,
          "navPrev": null,
          "numberOfMonths": 1,
          "onClose": [Function],
          "onDateChange": [Function],
          "onFocusChange": [Function],
          "onNextMonthClick": [Function],
          "onPrevMonthClick": [Function],
          "orientation": "horizontal",
          "phrases": Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          },
          "placeholder": "Date",
          "readOnly": false,
          "renderCalendarInfo": null,
          "renderDay": null,
          "renderMonth": null,
          "reopenPickerOnClearDate": false,
          "required": false,
          "screenReaderInputMessage": "",
          "showClearDate": false,
          "showDefaultInputIcon": false,
          "withFullScreenPortal": false,
          "withPortal": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "input--textarea",
          "onChange": [Function],
          "placeholder": "Add a note for your expense (optional)",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "textarea",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="button--add"
>
            Save Expense
</button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Expense",
            "className": "button--add",
          },
          "ref": null,
          "rendered": "Save Expense",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <select
            autoFocus={true}
            className="input--text"
            onChange={[Function]}
            value="Gum"
>
            <option>
                        Please select an option
            </option>
            <option
                        value="Travel"
            >
                        Travel
            </option>
            <option
                        value="Entertainment"
            >
                        Entertainment
            </option>
            <option
                        value="Internet and Phone Bills"
            >
                        Internet and Phone Bills
            </option>
            <option
                        value="Health Insurance Premium"
            >
                        Health Insurance Premium
            </option>
            <option
                        value="Meals"
            >
                        Meals
            </option>
            <option
                        value="Vehicle Use"
            >
                        Vehicle Use
            </option>
            <option
                        value="Education Expenses"
            >
                        Education Expenses
            </option>
            <option
                        value="Business Insurance"
            >
                        Business Insurance
            </option>
            <option
                        value="Rent"
            >
                        Rent
            </option>
            <option
                        value="Advertising"
            >
                        Advertising
            </option>
            <option
                        value="Other"
            >
                        Other (Please elaborate in detail in notes)
            </option>
</select>,
          <input
            className="input--text"
            onChange={[Function]}
            placeholder="Amount"
            type="text"
            value="1.95"
/>,
          <SingleDatePicker
            anchorDirection="left"
            customCloseIcon={null}
            customInputIcon={null}
            date={"1970-01-01T00:00:00.000Z"}
            daySize={39}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            id="date"
            initialVisibleMonth={null}
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            orientation="horizontal"
            phrases={
                        Object {
                                    "chooseAvailableDate": [Function],
                                    "clearDate": "Clear Date",
                                    "closeDatePicker": "Close",
                                    "dateIsUnavailable": [Function],
                                    "enterKey": "Enter key",
                                    "escape": "Escape key",
                                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                    "homeEnd": "Home and end keys",
                                    "jumpToNextMonth": "Move forward to switch to the next month",
                                    "jumpToPrevMonth": "Move backward to switch to the previous month",
                                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                    "keyboardShortcuts": "Keyboard Shortcuts",
                                    "leftArrowRightArrow": "Right and left arrow keys",
                                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                    "moveFocusByOneMonth": "Switch months",
                                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                    "openThisPanel": "Open this panel",
                                    "pageUpPageDown": "page up and page down keys",
                                    "questionMark": "Question mark",
                                    "returnFocusToInput": "Return to the date input field",
                                    "selectFocusedDate": "Select the date in focus",
                                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                    "upArrowDownArrow": "up and down arrow keys",
                                  }
            }
            placeholder="Date"
            readOnly={false}
            renderCalendarInfo={null}
            renderDay={null}
            renderMonth={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            withFullScreenPortal={false}
            withPortal={false}
/>,
          <textarea
            className="input--textarea"
            onChange={[Function]}
            placeholder="Add a note for your expense (optional)"
            value=""
/>,
          <div>
            <button
                        className="button--add"
            >
                        Save Expense
            </button>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoFocus": true,
            "children": Array [
              <option>
                Please select an option
</option>,
              <option
                value="Travel"
>
                Travel
</option>,
              <option
                value="Entertainment"
>
                Entertainment
</option>,
              <option
                value="Internet and Phone Bills"
>
                Internet and Phone Bills
</option>,
              <option
                value="Health Insurance Premium"
>
                Health Insurance Premium
</option>,
              <option
                value="Meals"
>
                Meals
</option>,
              <option
                value="Vehicle Use"
>
                Vehicle Use
</option>,
              <option
                value="Education Expenses"
>
                Education Expenses
</option>,
              <option
                value="Business Insurance"
>
                Business Insurance
</option>,
              <option
                value="Rent"
>
                Rent
</option>,
              <option
                value="Advertising"
>
                Advertising
</option>,
              <option
                value="Other"
>
                Other (Please elaborate in detail in notes)
</option>,
            ],
            "className": "input--text",
            "onChange": [Function],
            "value": "Gum",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Please select an option",
              },
              "ref": null,
              "rendered": "Please select an option",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Travel",
                "value": "Travel",
              },
              "ref": null,
              "rendered": "Travel",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Entertainment",
                "value": "Entertainment",
              },
              "ref": null,
              "rendered": "Entertainment",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Internet and Phone Bills",
                "value": "Internet and Phone Bills",
              },
              "ref": null,
              "rendered": "Internet and Phone Bills",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Health Insurance Premium",
                "value": "Health Insurance Premium",
              },
              "ref": null,
              "rendered": "Health Insurance Premium",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Meals",
                "value": "Meals",
              },
              "ref": null,
              "rendered": "Meals",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Vehicle Use",
                "value": "Vehicle Use",
              },
              "ref": null,
              "rendered": "Vehicle Use",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Education Expenses",
                "value": "Education Expenses",
              },
              "ref": null,
              "rendered": "Education Expenses",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Business Insurance",
                "value": "Business Insurance",
              },
              "ref": null,
              "rendered": "Business Insurance",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Rent",
                "value": "Rent",
              },
              "ref": null,
              "rendered": "Rent",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Advertising",
                "value": "Advertising",
              },
              "ref": null,
              "rendered": "Advertising",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Other (Please elaborate in detail in notes)",
                "value": "Other",
              },
              "ref": null,
              "rendered": "Other (Please elaborate in detail in notes)",
              "type": "option",
            },
          ],
          "type": "select",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "input--text",
            "onChange": [Function],
            "placeholder": "Amount",
            "type": "text",
            "value": "1.95",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "anchorDirection": "left",
            "customCloseIcon": null,
            "customInputIcon": null,
            "date": "1970-01-01T00:00:00.000Z",
            "daySize": 39,
            "disabled": false,
            "displayFormat": [Function],
            "enableOutsideDays": false,
            "firstDayOfWeek": null,
            "focused": false,
            "hideKeyboardShortcutsPanel": false,
            "horizontalMargin": 0,
            "id": "date",
            "initialVisibleMonth": null,
            "isDayBlocked": [Function],
            "isDayHighlighted": [Function],
            "isOutsideRange": [Function],
            "isRTL": false,
            "keepOpenOnDateSelect": false,
            "monthFormat": "MMMM YYYY",
            "navNext": null,
            "navPrev": null,
            "numberOfMonths": 1,
            "onClose": [Function],
            "onDateChange": [Function],
            "onFocusChange": [Function],
            "onNextMonthClick": [Function],
            "onPrevMonthClick": [Function],
            "orientation": "horizontal",
            "phrases": Object {
              "chooseAvailableDate": [Function],
              "clearDate": "Clear Date",
              "closeDatePicker": "Close",
              "dateIsUnavailable": [Function],
              "enterKey": "Enter key",
              "escape": "Escape key",
              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
              "homeEnd": "Home and end keys",
              "jumpToNextMonth": "Move forward to switch to the next month",
              "jumpToPrevMonth": "Move backward to switch to the previous month",
              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
              "keyboardShortcuts": "Keyboard Shortcuts",
              "leftArrowRightArrow": "Right and left arrow keys",
              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
              "moveFocusByOneMonth": "Switch months",
              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
              "openThisPanel": "Open this panel",
              "pageUpPageDown": "page up and page down keys",
              "questionMark": "Question mark",
              "returnFocusToInput": "Return to the date input field",
              "selectFocusedDate": "Select the date in focus",
              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
              "upArrowDownArrow": "up and down arrow keys",
            },
            "placeholder": "Date",
            "readOnly": false,
            "renderCalendarInfo": null,
            "renderDay": null,
            "renderMonth": null,
            "reopenPickerOnClearDate": false,
            "required": false,
            "screenReaderInputMessage": "",
            "showClearDate": false,
            "showDefaultInputIcon": false,
            "withFullScreenPortal": false,
            "withPortal": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "input--textarea",
            "onChange": [Function],
            "placeholder": "Add a note for your expense (optional)",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "textarea",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="button--add"
>
              Save Expense
</button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save Expense",
              "className": "button--add",
            },
            "ref": null,
            "rendered": "Save Expense",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`should render ExpenseForm correctly with expense data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseForm
    expense={
        Object {
            "amount": 109500,
            "createdAt": -345600000,
            "description": "Rent",
            "id": "2",
            "note": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <select
          autoFocus={true}
          className="input--text"
          onChange={[Function]}
          value="Rent"
>
          <option>
                    Please select an option
          </option>
          <option
                    value="Travel"
          >
                    Travel
          </option>
          <option
                    value="Entertainment"
          >
                    Entertainment
          </option>
          <option
                    value="Internet and Phone Bills"
          >
                    Internet and Phone Bills
          </option>
          <option
                    value="Health Insurance Premium"
          >
                    Health Insurance Premium
          </option>
          <option
                    value="Meals"
          >
                    Meals
          </option>
          <option
                    value="Vehicle Use"
          >
                    Vehicle Use
          </option>
          <option
                    value="Education Expenses"
          >
                    Education Expenses
          </option>
          <option
                    value="Business Insurance"
          >
                    Business Insurance
          </option>
          <option
                    value="Rent"
          >
                    Rent
          </option>
          <option
                    value="Advertising"
          >
                    Advertising
          </option>
          <option
                    value="Other"
          >
                    Other (Please elaborate in detail in notes)
          </option>
</select>,
        <input
          className="input--text"
          onChange={[Function]}
          placeholder="Amount"
          type="text"
          value="1095"
/>,
        <SingleDatePicker
          anchorDirection="left"
          customCloseIcon={null}
          customInputIcon={null}
          date={"1969-12-28T00:00:00.000Z"}
          daySize={39}
          disabled={false}
          displayFormat={[Function]}
          enableOutsideDays={false}
          firstDayOfWeek={null}
          focused={false}
          hideKeyboardShortcutsPanel={false}
          horizontalMargin={0}
          id="date"
          initialVisibleMonth={null}
          isDayBlocked={[Function]}
          isDayHighlighted={[Function]}
          isOutsideRange={[Function]}
          isRTL={false}
          keepOpenOnDateSelect={false}
          monthFormat="MMMM YYYY"
          navNext={null}
          navPrev={null}
          numberOfMonths={1}
          onClose={[Function]}
          onDateChange={[Function]}
          onFocusChange={[Function]}
          onNextMonthClick={[Function]}
          onPrevMonthClick={[Function]}
          orientation="horizontal"
          phrases={
                    Object {
                              "chooseAvailableDate": [Function],
                              "clearDate": "Clear Date",
                              "closeDatePicker": "Close",
                              "dateIsUnavailable": [Function],
                              "enterKey": "Enter key",
                              "escape": "Escape key",
                              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                              "homeEnd": "Home and end keys",
                              "jumpToNextMonth": "Move forward to switch to the next month",
                              "jumpToPrevMonth": "Move backward to switch to the previous month",
                              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                      select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                              "keyboardShortcuts": "Keyboard Shortcuts",
                              "leftArrowRightArrow": "Right and left arrow keys",
                              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                              "moveFocusByOneMonth": "Switch months",
                              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                              "openThisPanel": "Open this panel",
                              "pageUpPageDown": "page up and page down keys",
                              "questionMark": "Question mark",
                              "returnFocusToInput": "Return to the date input field",
                              "selectFocusedDate": "Select the date in focus",
                              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                              "upArrowDownArrow": "up and down arrow keys",
                            }
          }
          placeholder="Date"
          readOnly={false}
          renderCalendarInfo={null}
          renderDay={null}
          renderMonth={null}
          reopenPickerOnClearDate={false}
          required={false}
          screenReaderInputMessage=""
          showClearDate={false}
          showDefaultInputIcon={false}
          withFullScreenPortal={false}
          withPortal={false}
/>,
        <textarea
          className="input--textarea"
          onChange={[Function]}
          placeholder="Add a note for your expense (optional)"
          value=""
/>,
        <div>
          <button
                    className="button--add"
          >
                    Save Expense
          </button>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "autoFocus": true,
          "children": Array [
            <option>
              Please select an option
</option>,
            <option
              value="Travel"
>
              Travel
</option>,
            <option
              value="Entertainment"
>
              Entertainment
</option>,
            <option
              value="Internet and Phone Bills"
>
              Internet and Phone Bills
</option>,
            <option
              value="Health Insurance Premium"
>
              Health Insurance Premium
</option>,
            <option
              value="Meals"
>
              Meals
</option>,
            <option
              value="Vehicle Use"
>
              Vehicle Use
</option>,
            <option
              value="Education Expenses"
>
              Education Expenses
</option>,
            <option
              value="Business Insurance"
>
              Business Insurance
</option>,
            <option
              value="Rent"
>
              Rent
</option>,
            <option
              value="Advertising"
>
              Advertising
</option>,
            <option
              value="Other"
>
              Other (Please elaborate in detail in notes)
</option>,
          ],
          "className": "input--text",
          "onChange": [Function],
          "value": "Rent",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Please select an option",
            },
            "ref": null,
            "rendered": "Please select an option",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Travel",
              "value": "Travel",
            },
            "ref": null,
            "rendered": "Travel",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Entertainment",
              "value": "Entertainment",
            },
            "ref": null,
            "rendered": "Entertainment",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Internet and Phone Bills",
              "value": "Internet and Phone Bills",
            },
            "ref": null,
            "rendered": "Internet and Phone Bills",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Health Insurance Premium",
              "value": "Health Insurance Premium",
            },
            "ref": null,
            "rendered": "Health Insurance Premium",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Meals",
              "value": "Meals",
            },
            "ref": null,
            "rendered": "Meals",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Vehicle Use",
              "value": "Vehicle Use",
            },
            "ref": null,
            "rendered": "Vehicle Use",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Education Expenses",
              "value": "Education Expenses",
            },
            "ref": null,
            "rendered": "Education Expenses",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Business Insurance",
              "value": "Business Insurance",
            },
            "ref": null,
            "rendered": "Business Insurance",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Rent",
              "value": "Rent",
            },
            "ref": null,
            "rendered": "Rent",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Advertising",
              "value": "Advertising",
            },
            "ref": null,
            "rendered": "Advertising",
            "type": "option",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Other (Please elaborate in detail in notes)",
              "value": "Other",
            },
            "ref": null,
            "rendered": "Other (Please elaborate in detail in notes)",
            "type": "option",
          },
        ],
        "type": "select",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "input--text",
          "onChange": [Function],
          "placeholder": "Amount",
          "type": "text",
          "value": "1095",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "anchorDirection": "left",
          "customCloseIcon": null,
          "customInputIcon": null,
          "date": "1969-12-28T00:00:00.000Z",
          "daySize": 39,
          "disabled": false,
          "displayFormat": [Function],
          "enableOutsideDays": false,
          "firstDayOfWeek": null,
          "focused": false,
          "hideKeyboardShortcutsPanel": false,
          "horizontalMargin": 0,
          "id": "date",
          "initialVisibleMonth": null,
          "isDayBlocked": [Function],
          "isDayHighlighted": [Function],
          "isOutsideRange": [Function],
          "isRTL": false,
          "keepOpenOnDateSelect": false,
          "monthFormat": "MMMM YYYY",
          "navNext": null,
          "navPrev": null,
          "numberOfMonths": 1,
          "onClose": [Function],
          "onDateChange": [Function],
          "onFocusChange": [Function],
          "onNextMonthClick": [Function],
          "onPrevMonthClick": [Function],
          "orientation": "horizontal",
          "phrases": Object {
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          },
          "placeholder": "Date",
          "readOnly": false,
          "renderCalendarInfo": null,
          "renderDay": null,
          "renderMonth": null,
          "reopenPickerOnClearDate": false,
          "required": false,
          "screenReaderInputMessage": "",
          "showClearDate": false,
          "showDefaultInputIcon": false,
          "withFullScreenPortal": false,
          "withPortal": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "input--textarea",
          "onChange": [Function],
          "placeholder": "Add a note for your expense (optional)",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "textarea",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="button--add"
>
            Save Expense
</button>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Expense",
            "className": "button--add",
          },
          "ref": null,
          "rendered": "Save Expense",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <select
            autoFocus={true}
            className="input--text"
            onChange={[Function]}
            value="Rent"
>
            <option>
                        Please select an option
            </option>
            <option
                        value="Travel"
            >
                        Travel
            </option>
            <option
                        value="Entertainment"
            >
                        Entertainment
            </option>
            <option
                        value="Internet and Phone Bills"
            >
                        Internet and Phone Bills
            </option>
            <option
                        value="Health Insurance Premium"
            >
                        Health Insurance Premium
            </option>
            <option
                        value="Meals"
            >
                        Meals
            </option>
            <option
                        value="Vehicle Use"
            >
                        Vehicle Use
            </option>
            <option
                        value="Education Expenses"
            >
                        Education Expenses
            </option>
            <option
                        value="Business Insurance"
            >
                        Business Insurance
            </option>
            <option
                        value="Rent"
            >
                        Rent
            </option>
            <option
                        value="Advertising"
            >
                        Advertising
            </option>
            <option
                        value="Other"
            >
                        Other (Please elaborate in detail in notes)
            </option>
</select>,
          <input
            className="input--text"
            onChange={[Function]}
            placeholder="Amount"
            type="text"
            value="1095"
/>,
          <SingleDatePicker
            anchorDirection="left"
            customCloseIcon={null}
            customInputIcon={null}
            date={"1969-12-28T00:00:00.000Z"}
            daySize={39}
            disabled={false}
            displayFormat={[Function]}
            enableOutsideDays={false}
            firstDayOfWeek={null}
            focused={false}
            hideKeyboardShortcutsPanel={false}
            horizontalMargin={0}
            id="date"
            initialVisibleMonth={null}
            isDayBlocked={[Function]}
            isDayHighlighted={[Function]}
            isOutsideRange={[Function]}
            isRTL={false}
            keepOpenOnDateSelect={false}
            monthFormat="MMMM YYYY"
            navNext={null}
            navPrev={null}
            numberOfMonths={1}
            onClose={[Function]}
            onDateChange={[Function]}
            onFocusChange={[Function]}
            onNextMonthClick={[Function]}
            onPrevMonthClick={[Function]}
            orientation="horizontal"
            phrases={
                        Object {
                                    "chooseAvailableDate": [Function],
                                    "clearDate": "Clear Date",
                                    "closeDatePicker": "Close",
                                    "dateIsUnavailable": [Function],
                                    "enterKey": "Enter key",
                                    "escape": "Escape key",
                                    "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
                                    "homeEnd": "Home and end keys",
                                    "jumpToNextMonth": "Move forward to switch to the next month",
                                    "jumpToPrevMonth": "Move backward to switch to the previous month",
                                    "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
                          select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
                                    "keyboardShortcuts": "Keyboard Shortcuts",
                                    "leftArrowRightArrow": "Right and left arrow keys",
                                    "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
                                    "moveFocusByOneMonth": "Switch months",
                                    "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
                                    "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
                                    "openThisPanel": "Open this panel",
                                    "pageUpPageDown": "page up and page down keys",
                                    "questionMark": "Question mark",
                                    "returnFocusToInput": "Return to the date input field",
                                    "selectFocusedDate": "Select the date in focus",
                                    "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
                                    "upArrowDownArrow": "up and down arrow keys",
                                  }
            }
            placeholder="Date"
            readOnly={false}
            renderCalendarInfo={null}
            renderDay={null}
            renderMonth={null}
            reopenPickerOnClearDate={false}
            required={false}
            screenReaderInputMessage=""
            showClearDate={false}
            showDefaultInputIcon={false}
            withFullScreenPortal={false}
            withPortal={false}
/>,
          <textarea
            className="input--textarea"
            onChange={[Function]}
            placeholder="Add a note for your expense (optional)"
            value=""
/>,
          <div>
            <button
                        className="button--add"
            >
                        Save Expense
            </button>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "autoFocus": true,
            "children": Array [
              <option>
                Please select an option
</option>,
              <option
                value="Travel"
>
                Travel
</option>,
              <option
                value="Entertainment"
>
                Entertainment
</option>,
              <option
                value="Internet and Phone Bills"
>
                Internet and Phone Bills
</option>,
              <option
                value="Health Insurance Premium"
>
                Health Insurance Premium
</option>,
              <option
                value="Meals"
>
                Meals
</option>,
              <option
                value="Vehicle Use"
>
                Vehicle Use
</option>,
              <option
                value="Education Expenses"
>
                Education Expenses
</option>,
              <option
                value="Business Insurance"
>
                Business Insurance
</option>,
              <option
                value="Rent"
>
                Rent
</option>,
              <option
                value="Advertising"
>
                Advertising
</option>,
              <option
                value="Other"
>
                Other (Please elaborate in detail in notes)
</option>,
            ],
            "className": "input--text",
            "onChange": [Function],
            "value": "Rent",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Please select an option",
              },
              "ref": null,
              "rendered": "Please select an option",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Travel",
                "value": "Travel",
              },
              "ref": null,
              "rendered": "Travel",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Entertainment",
                "value": "Entertainment",
              },
              "ref": null,
              "rendered": "Entertainment",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Internet and Phone Bills",
                "value": "Internet and Phone Bills",
              },
              "ref": null,
              "rendered": "Internet and Phone Bills",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Health Insurance Premium",
                "value": "Health Insurance Premium",
              },
              "ref": null,
              "rendered": "Health Insurance Premium",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Meals",
                "value": "Meals",
              },
              "ref": null,
              "rendered": "Meals",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Vehicle Use",
                "value": "Vehicle Use",
              },
              "ref": null,
              "rendered": "Vehicle Use",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Education Expenses",
                "value": "Education Expenses",
              },
              "ref": null,
              "rendered": "Education Expenses",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Business Insurance",
                "value": "Business Insurance",
              },
              "ref": null,
              "rendered": "Business Insurance",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Rent",
                "value": "Rent",
              },
              "ref": null,
              "rendered": "Rent",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Advertising",
                "value": "Advertising",
              },
              "ref": null,
              "rendered": "Advertising",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Other (Please elaborate in detail in notes)",
                "value": "Other",
              },
              "ref": null,
              "rendered": "Other (Please elaborate in detail in notes)",
              "type": "option",
            },
          ],
          "type": "select",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "input--text",
            "onChange": [Function],
            "placeholder": "Amount",
            "type": "text",
            "value": "1095",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "anchorDirection": "left",
            "customCloseIcon": null,
            "customInputIcon": null,
            "date": "1969-12-28T00:00:00.000Z",
            "daySize": 39,
            "disabled": false,
            "displayFormat": [Function],
            "enableOutsideDays": false,
            "firstDayOfWeek": null,
            "focused": false,
            "hideKeyboardShortcutsPanel": false,
            "horizontalMargin": 0,
            "id": "date",
            "initialVisibleMonth": null,
            "isDayBlocked": [Function],
            "isDayHighlighted": [Function],
            "isOutsideRange": [Function],
            "isRTL": false,
            "keepOpenOnDateSelect": false,
            "monthFormat": "MMMM YYYY",
            "navNext": null,
            "navPrev": null,
            "numberOfMonths": 1,
            "onClose": [Function],
            "onDateChange": [Function],
            "onFocusChange": [Function],
            "onNextMonthClick": [Function],
            "onPrevMonthClick": [Function],
            "orientation": "horizontal",
            "phrases": Object {
              "chooseAvailableDate": [Function],
              "clearDate": "Clear Date",
              "closeDatePicker": "Close",
              "dateIsUnavailable": [Function],
              "enterKey": "Enter key",
              "escape": "Escape key",
              "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
              "homeEnd": "Home and end keys",
              "jumpToNextMonth": "Move forward to switch to the next month",
              "jumpToPrevMonth": "Move backward to switch to the previous month",
              "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
  select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
              "keyboardShortcuts": "Keyboard Shortcuts",
              "leftArrowRightArrow": "Right and left arrow keys",
              "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
              "moveFocusByOneMonth": "Switch months",
              "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
              "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
              "openThisPanel": "Open this panel",
              "pageUpPageDown": "page up and page down keys",
              "questionMark": "Question mark",
              "returnFocusToInput": "Return to the date input field",
              "selectFocusedDate": "Select the date in focus",
              "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
              "upArrowDownArrow": "up and down arrow keys",
            },
            "placeholder": "Date",
            "readOnly": false,
            "renderCalendarInfo": null,
            "renderDay": null,
            "renderMonth": null,
            "reopenPickerOnClearDate": false,
            "required": false,
            "screenReaderInputMessage": "",
            "showClearDate": false,
            "showDefaultInputIcon": false,
            "withFullScreenPortal": false,
            "withPortal": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "input--textarea",
            "onChange": [Function],
            "placeholder": "Add a note for your expense (optional)",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "textarea",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="button--add"
>
              Save Expense
</button>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Save Expense",
              "className": "button--add",
            },
            "ref": null,
            "rendered": "Save Expense",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
